Fix spacing.

--- a/client/components/App.css
+++ b/client/components/App.css
@@ -13,10 +13,25 @@
     border-right: black;
     border-right-width: 2px;
   }
+  .filter {
+    display: flex;
+    justify-content: space-between;
+    margin: 5px;
+    padding: 2px;
+    flex-direction: row;
+  }
   .filter:hover {
+    display: flex;
     background-color: #2897C5;
     color: white;
+    margin: 5px;
+    padding: 2px;
   }
+  .facetCount {
+    align-self: center;
+    justify-content: flex-end;
+  }
+
   .verticalLine {
     border-left: solid 2px rgba(128, 128, 128, 0.45);
     margin-left: 3%;
